--- a/TestApp5/ConsoleApp1/ConsoleApp1.csproj
+++ b/TestApp5/ConsoleApp1/ConsoleApp1.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D73543F5-69AE-4E54-9C6E-76FD3F49535F}</ProjectGuid>
+    <ProjectGuid>{EDF0864B-3533-4075-807F-98DACE5DCC68}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>ConsoleApp1</RootNamespace>
     <AssemblyName>ConsoleApp1</AssemblyName>
@@ -43,14 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ILaunch.cs" />
-    <Compile Include="MarsRocket.cs" />
-    <Compile Include="MoonRocket.cs" />
-    <Compile Include="Pinta.cs" />
+    <Compile Include="Balloon.cs" />
+    <Compile Include="Basket.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Rocket.cs" />
-    <Compile Include="Singleton.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
