--- a/TestApp6/ConsoleApp1/ConsoleApp1.csproj
+++ b/TestApp6/ConsoleApp1/ConsoleApp1.csproj
@@ -19,7 +19,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;RELEASE_B</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -45,8 +45,10 @@
   <ItemGroup>
     <Compile Include="Book.cs" />
     <Compile Include="Library.cs" />
+    <Compile Include="LogLevelAttribute.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestReflection.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
