--- a/TestApp6/ConsoleApp1/ConsoleApp1.csproj
+++ b/TestApp6/ConsoleApp1/ConsoleApp1.csproj
@@ -48,6 +48,7 @@
     <Compile Include="LogLevelAttribute.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestIO.cs" />
     <Compile Include="TestReflection.cs" />
   </ItemGroup>
   <ItemGroup>
